# ocr-client

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: implementation-plan.md
src/ocr_client/: __init__.py  cli.py  model.py  pipeline.py
tests/: test_bootstrap.py
