[project]
name = "ocr-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "addict",
    "easydict",
    "einops",
    "pillow",
    "tokenizers==0.20.3",
    "torch==2.6.0",
    "torchvision",
    "transformers==4.46.3",
]

[project.scripts]
ocr-client = "ocr_client.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pyrefly>=0.52.0"]

[tool.uv.extra-build-dependencies]
flash-attn = ["psutil"]
